--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "vpublish": "npm version patch -m \"Version %s\" && npm publish",
-    "test": "mocha --reporter spec",
+    "test": "./node_modules/mocha/bin/mocha --reporter spec",
     "cover": "node_modules/istanbul/lib/cli.js cover node_modules/mocha/bin/_mocha -- -R spec test/*"
   },
   "engines": {
@@ -32,10 +32,9 @@
     "chai": "^4.1.2",
     "coveralls": "^3.0.0",
     "istanbul": "^0.4.5",
-    "loopback": "^3.22.3",
-    "loopback-boot": "^2.27.1",
-    "loopback-component-explorer": "^6.2.0",
-    "mocha": "^5.0.0",
+    "loopback": "^3.27.0",
+    "loopback-boot": "^3.3.1",
+    "mocha": "^8.1.1",
     "supertest": "^3.0.0",
     "supertest-as-promised": "^4.0.2"
   },
